// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it can treat missing data as breaching 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_metric_alarm\\": {
      \\"test-lambda_invocations_D15DE20B\\": {
        \\"alarm_actions\\": [],
        \\"alarm_description\\": \\"Total invocations breaches threshold\\",
        \\"alarm_name\\": \\"test-lambda-Lambda-Invocations-Alarm\\",
        \\"comparison_operator\\": \\"GreaterThanThreshold\\",
        \\"datapoints_to_alarm\\": 1,
        \\"dimensions\\": {
          \\"FunctionName\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}\\",
          \\"Resource\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}:\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.name}\\"
        },
        \\"evaluation_periods\\": 1,
        \\"insufficient_data_actions\\": [],
        \\"metric_name\\": \\"Invocations\\",
        \\"namespace\\": \\"AWS/Lambda\\",
        \\"ok_actions\\": [],
        \\"period\\": 60,
        \\"statistic\\": \\"Sum\\",
        \\"threshold\\": 1,
        \\"treat_missing_data\\": \\"breaching\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/invocations\\",
            \\"uniqueId\\": \\"test-lambda_invocations_D15DE20B\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda target 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda target with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"tags\\": {
          \\"my\\": \\"tags\\",
          \\"for\\": \\"test\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"tags\\": {
          \\"my\\": \\"tags\\",
          \\"for\\": \\"test\\"
        },
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda with alarms 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_metric_alarm\\": {
      \\"test-lambda_invocations_D15DE20B\\": {
        \\"alarm_actions\\": [],
        \\"alarm_description\\": \\"Total invocations breaches threshold\\",
        \\"alarm_name\\": \\"test-lambda-Lambda-Invocations-Alarm\\",
        \\"comparison_operator\\": \\"GreaterThanThreshold\\",
        \\"datapoints_to_alarm\\": 1,
        \\"dimensions\\": {
          \\"FunctionName\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}\\",
          \\"Resource\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}:\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.name}\\"
        },
        \\"evaluation_periods\\": 1,
        \\"insufficient_data_actions\\": [],
        \\"metric_name\\": \\"Invocations\\",
        \\"namespace\\": \\"AWS/Lambda\\",
        \\"ok_actions\\": [],
        \\"period\\": 60,
        \\"statistic\\": \\"Sum\\",
        \\"threshold\\": 1,
        \\"treat_missing_data\\": \\"missing\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/invocations\\",
            \\"uniqueId\\": \\"test-lambda_invocations_D15DE20B\\"
          }
        }
      },
      \\"test-lambda_errors_E579F2B3\\": {
        \\"alarm_actions\\": [],
        \\"alarm_description\\": \\"Total errors breaches threshold\\",
        \\"alarm_name\\": \\"test-lambda-Lambda-Errors-Alarm\\",
        \\"comparison_operator\\": \\"GreaterThanThreshold\\",
        \\"datapoints_to_alarm\\": 1,
        \\"dimensions\\": {
          \\"FunctionName\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}\\",
          \\"Resource\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}:\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.name}\\"
        },
        \\"evaluation_periods\\": 1,
        \\"insufficient_data_actions\\": [],
        \\"metric_name\\": \\"Errors\\",
        \\"namespace\\": \\"AWS/Lambda\\",
        \\"ok_actions\\": [],
        \\"period\\": 60,
        \\"statistic\\": \\"Sum\\",
        \\"threshold\\": 1,
        \\"treat_missing_data\\": \\"missing\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/errors\\",
            \\"uniqueId\\": \\"test-lambda_errors_E579F2B3\\"
          }
        }
      },
      \\"test-lambda_concurrentexecutions_B7910145\\": {
        \\"alarm_actions\\": [],
        \\"alarm_description\\": \\"Total concurrentexecutions breaches threshold\\",
        \\"alarm_name\\": \\"test-lambda-Lambda-ConcurrentExecutions-Alarm\\",
        \\"comparison_operator\\": \\"GreaterThanThreshold\\",
        \\"datapoints_to_alarm\\": 1,
        \\"dimensions\\": {
          \\"FunctionName\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}\\",
          \\"Resource\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}:\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.name}\\"
        },
        \\"evaluation_periods\\": 1,
        \\"insufficient_data_actions\\": [],
        \\"metric_name\\": \\"ConcurrentExecutions\\",
        \\"namespace\\": \\"AWS/Lambda\\",
        \\"ok_actions\\": [],
        \\"period\\": 60,
        \\"statistic\\": \\"Sum\\",
        \\"threshold\\": 1,
        \\"treat_missing_data\\": \\"missing\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/concurrentexecutions\\",
            \\"uniqueId\\": \\"test-lambda_concurrentexecutions_B7910145\\"
          }
        }
      },
      \\"test-lambda_throttles_562A3BCE\\": {
        \\"alarm_actions\\": [],
        \\"alarm_description\\": \\"Total throttles breaches threshold\\",
        \\"alarm_name\\": \\"test-lambda-Lambda-Throttles-Alarm\\",
        \\"comparison_operator\\": \\"GreaterThanThreshold\\",
        \\"datapoints_to_alarm\\": 1,
        \\"dimensions\\": {
          \\"FunctionName\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}\\",
          \\"Resource\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}:\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.name}\\"
        },
        \\"evaluation_periods\\": 1,
        \\"insufficient_data_actions\\": [],
        \\"metric_name\\": \\"Throttles\\",
        \\"namespace\\": \\"AWS/Lambda\\",
        \\"ok_actions\\": [],
        \\"period\\": 60,
        \\"statistic\\": \\"Sum\\",
        \\"threshold\\": 1,
        \\"treat_missing_data\\": \\"missing\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/throttles\\",
            \\"uniqueId\\": \\"test-lambda_throttles_562A3BCE\\"
          }
        }
      },
      \\"test-lambda_duration_E92A1EBB\\": {
        \\"alarm_actions\\": [],
        \\"alarm_description\\": \\"Total duration breaches threshold\\",
        \\"alarm_name\\": \\"test-lambda-Lambda-Duration-Alarm\\",
        \\"comparison_operator\\": \\"GreaterThanThreshold\\",
        \\"datapoints_to_alarm\\": 1,
        \\"dimensions\\": {
          \\"FunctionName\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}\\",
          \\"Resource\\": \\"\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.function_name}:\${aws_lambda_alias.test-lambda_alias_CCFDFCE9.name}\\"
        },
        \\"evaluation_periods\\": 1,
        \\"insufficient_data_actions\\": [],
        \\"metric_name\\": \\"Duration\\",
        \\"namespace\\": \\"AWS/Lambda\\",
        \\"ok_actions\\": [],
        \\"period\\": 60,
        \\"statistic\\": \\"Sum\\",
        \\"threshold\\": 1,
        \\"treat_missing_data\\": \\"missing\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/duration\\",
            \\"uniqueId\\": \\"test-lambda_duration_E92A1EBB\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda with code deploy 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      },
      \\"test-lambda_lambda-code-deploy_code-deploy-role_6EA86ECC\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_lambda-code-deploy_code-deploy-assume-role-policy-document_C6C06F39.json}\\",
        \\"name\\": \\"test-lambda-CodeDeployRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda-code-deploy/code-deploy-role\\",
            \\"uniqueId\\": \\"test-lambda_lambda-code-deploy_code-deploy-role_6EA86ECC\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      },
      \\"test-lambda_lambda-code-deploy_code-deploy-policy-attachment_0805E344\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForLambda\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_lambda-code-deploy_code-deploy-role_6EA86ECC.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_lambda-code-deploy_code-deploy-role_6EA86ECC\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda-code-deploy/code-deploy-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_lambda-code-deploy_code-deploy-policy-attachment_0805E344\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\",
            \\"publish\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    },
    \\"aws_codedeploy_app\\": {
      \\"test-lambda_lambda-code-deploy_code-deploy-app_7C98647C\\": {
        \\"compute_platform\\": \\"Lambda\\",
        \\"name\\": \\"test-lambda-Lambda\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda-code-deploy/code-deploy-app\\",
            \\"uniqueId\\": \\"test-lambda_lambda-code-deploy_code-deploy-app_7C98647C\\"
          }
        }
      }
    },
    \\"aws_codedeploy_deployment_group\\": {
      \\"test-lambda_lambda-code-deploy_code-deployment-group_07908CD9\\": {
        \\"app_name\\": \\"\${aws_codedeploy_app.test-lambda_lambda-code-deploy_code-deploy-app_7C98647C.name}\\",
        \\"deployment_config_name\\": \\"CodeDeployDefault.LambdaAllAtOnce\\",
        \\"deployment_group_name\\": \\"\${aws_codedeploy_app.test-lambda_lambda-code-deploy_code-deploy-app_7C98647C.name}\\",
        \\"service_role_arn\\": \\"\${aws_iam_role.test-lambda_lambda-code-deploy_code-deploy-role_6EA86ECC.arn}\\",
        \\"auto_rollback_configuration\\": [
          {
            \\"enabled\\": true,
            \\"events\\": [
              \\"DEPLOYMENT_FAILURE\\"
            ]
          }
        ],
        \\"deployment_style\\": [
          {
            \\"deployment_option\\": \\"WITH_TRAFFIC_CONTROL\\",
            \\"deployment_type\\": \\"BLUE_GREEN\\"
          }
        ],
        \\"depends_on\\": [
          \\"aws_codedeploy_app.test-lambda_lambda-code-deploy_code-deploy-app_7C98647C\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda-code-deploy/code-deployment-group\\",
            \\"uniqueId\\": \\"test-lambda_lambda-code-deploy_code-deployment-group_07908CD9\\"
          }
        }
      }
    },
    \\"aws_codestarnotifications_notification_rule\\": {
      \\"test-lambda_lambda-code-deploy_notifications_E3D09B45\\": {
        \\"detail_type\\": \\"FULL\\",
        \\"event_type_ids\\": [
          \\"codedeploy-application-deployment-failed\\"
        ],
        \\"name\\": \\"\${aws_codedeploy_app.test-lambda_lambda-code-deploy_code-deploy-app_7C98647C.name}\\",
        \\"resource\\": \\"arn:aws:codedeploy:us-east-1:test-account:application:\${aws_codedeploy_app.test-lambda_lambda-code-deploy_code-deploy-app_7C98647C.name}\\",
        \\"target\\": [
          {
            \\"address\\": \\"arn:test\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda-code-deploy/notifications\\",
            \\"uniqueId\\": \\"test-lambda_lambda-code-deploy_notifications_E3D09B45\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      },
      \\"test-lambda_lambda-code-deploy_code-deploy-assume-role-policy-document_C6C06F39\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codedeploy.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda-code-deploy/code-deploy-assume-role-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_lambda-code-deploy_code-deploy-assume-role-policy-document_C6C06F39\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda with environment variables 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"environment\\": [
          {
            \\"variables\\": {
              \\"my\\": \\"var\\",
              \\"IS\\": \\"good\\"
            }
          }
        ],
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda with execution policy 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"*\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda with lambda description 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda with log retention 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 10,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda with s3 bucket 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"test-bucket\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda with timeout 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 300,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a lambda with vpc config 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-lambda_code-bucket_177F316E\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket_177F316E\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-lambda_code-bucket_177F316E.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-lambda_code-bucket-public-access-block_1E7CE5AE\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-lambda_execution-role_9D4EE856\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-lambda_assume-policy-document_D538087D.json}\\",
        \\"name\\": \\"test-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-lambda_execution-role_9D4EE856\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-lambda_execution-policy_19C785A8\\": {
        \\"name\\": \\"test-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-lambda_execution-policy-document_D94D17B4.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy_19C785A8\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-lambda_execution-role-policy-attachment_8796505D\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-lambda_execution-policy_19C785A8.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-lambda_execution-role_9D4EE856\\",
          \\"aws_iam_policy.test-lambda_execution-policy_19C785A8\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-lambda_execution-role-policy-attachment_8796505D\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-lambda_8915D118\\": {
        \\"filename\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_path}\\",
        \\"function_name\\": \\"test-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-lambda_execution-role_9D4EE856.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-lambda_lambda-default-file_7A7DBB68.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [
          {
            \\"security_group_ids\\": [
              \\"sec1\\",
              \\"sec2\\"
            ],
            \\"subnet_ids\\": [
              \\"1\\",
              \\"2\\"
            ]
          }
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-lambda_8915D118\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-lambda_log-group_ACC182B5\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-lambda_log-group_ACC182B5\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-lambda_alias_CCFDFCE9\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-lambda_8915D118.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-lambda_8915D118.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-lambda_8915D118\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-lambda_alias_CCFDFCE9\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-lambda_assume-policy-document_D538087D\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_assume-policy-document_D538087D\\"
          }
        }
      },
      \\"test-lambda_execution-policy-document_D94D17B4\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"ec2:DescribeNetworkInterfaces\\",
              \\"ec2:CreateNetworkInterface\\",
              \\"ec2:DeleteNetworkInterface\\",
              \\"ec2:DescribeInstances\\",
              \\"ec2:AttachNetworkInterface\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-lambda_execution-policy-document_D94D17B4\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-lambda_lambda-default-file_7A7DBB68\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-lambda_lambda-default-file_7A7DBB68\\"
          }
        }
      }
    }
  }
}"
`;
